--- a/deploy-template/src/output.css
+++ b/deploy-template/src/output.css
@@ -1657,36 +1657,45 @@ html {
   padding-bottom: 0.5rem;
 }
 
-.sticky {
-  position: sticky;
-}
-
 .z-\[1\] {
   z-index: 1;
 }
 
-.z-50 {
-  z-index: 50;
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
+.ml-36 {
+  margin-left: 9rem;
 }
 
 .mt-3 {
   margin-top: 0.75rem;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .h-5 {
   height: 1.25rem;
 }
 
-.h-12 {
-  height: 3rem;
+.h-screen {
+  height: 100vh;
 }
 
-.h-64 {
-  height: 16rem;
+.h-full {
+  height: 100%;
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.h-48 {
+  height: 12rem;
 }
 
 .w-5 {
@@ -1697,8 +1706,8 @@ html {
   width: 13rem;
 }
 
-.w-12 {
-  width: 3rem;
+.w-full {
+  width: 100%;
 }
 
 .max-w-md {
@@ -1721,14 +1730,14 @@ html {
   border-radius: var(--rounded-box, 1rem);
 }
 
-.bg-base-200 {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
-}
-
 .bg-base-100 {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity)));
+}
+
+.bg-base-200 {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
 }
 
 .bg-neutral {
@@ -1769,6 +1778,10 @@ html {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-neutral-content {
